// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`atomizer options --bump-mq 1`] = `
"
@media(min-width:500px) {
  .D\\\\(b\\\\)--sm {
    display: block;
  }
}
"
`;

exports[`atomizer options --bump-mq 2`] = `
"
@media(min-width:500px) {
  .D\\\\(b\\\\)--sm[class] {
    display: block;
  }
}
"
`;

exports[`atomizer options --config 1`] = `
"
.H\\\\(uh\\\\) {
  height: 79px;
}
"
`;

exports[`atomizer options --helpersNamespace 1`] = `
"
foo .StretchedBox {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}
"
`;

exports[`atomizer options --namespace 1`] = `
"
foo .D\\\\(b\\\\) {
  display: block;
}
"
`;

exports[`atomizer options --outfile 1`] = `
".D\\\\(b\\\\) {
  display: block;
}
"
`;

exports[`atomizer options --recursive 1`] = `
"
.D\\\\(ib\\\\) {
  display: inline-block;
}
.Fw\\\\(b\\\\) {
  font-weight: bold;
}
"
`;

exports[`atomizer options --rtl 1`] = `
"
.Mend\\\\(2px\\\\) {
  margin-left: 2px;
}
"
`;

exports[`atomizer options --rules 1`] = `
"
.Foo\\\\(1px\\\\) {
  foo: 1px;
}
"
`;

exports[`atomizer options --verbose 1`] = `
"Parsing file tests/fixtures/verbose/verbose.html for Atomic CSS classes
"
`;

exports[`atomizer options --verbose 2`] = `
"Parsing file tests/fixtures/verbose/verbose.html for Atomic CSS classes
Warning: Class \`D(MissingValue)\` is ambiguous, and must be manually added to your config file:
\\"custom\\": {
    \\"D(MissingValue)\\": <YOUR-CUSTOM-VALUE>
}
"
`;

exports[`atomizer should parse html files for classes 1`] = `
"
.D\\\\(b\\\\) {
  display: block;
}
"
`;
